--- a/IDM-18-01/readme
+++ b/IDM-18-01/readme
@@ -1,3 +1,33 @@
 Для успешной сдачи лабораторных работ и проекта студентам предлагается создание личной страницы, на которой будут размещаться отчеты c результатамb всех лабораторных работ и проекта. Предлагается использовать бесплатный хостинг от GitHub. Советую ознакомиться с инструкцией (https://htmlacademy.ru/blog/99-github-as-hosting)
 
 https://github.com/stankin/inet-2018/invitations
+
+| Студент | Роль | Команда | Страница | Проект | Модуль 1 | Модуль 2 |
+| :---:   | :-:  |   :-:   |   :-:    |  :-:   |    :-:   |   :-:    |
+| Аветисян Роберт Сергеевич | -  | - | - | - | - | - |
+| Андриянов Евгений Сергеевич | -  | - | - | - | - | - |
+| Анисимов Олег Эдуардович | -  | - | - | - | - | - |
+| Атанов Сергей Вадимович | -  | - | - | - | - | - |
+| Батухтин Михаил Сергеевич | -  | - | - | - | - | - |
+| Бесчастнов Илья Дмитриевич | -  | - | - | - | - | - |
+| Булычев Кирилл Валерьевич | -  | - | - | - | - | - |
+| Веселов Никита Кириллович | -  | - | - | - | - | - |
+| Грязнов Денис Владимирович | -  | - | - | - | - | - |
+| Занина Екатерина Сергеевна | -  | - | - | - | - | - |
+| Зотов Егор Вячеславович | -  | - | - | - | - | - |
+| Комиссаров Ян Вадимович | -  | - | - | - | - | - |
+| Коркмасов Джалалутдин Дагирович | -  | - | - | - | - | - |
+| Корный Артур Александрович | -  | - | - | - | - | - |
+| Крюков Алексей Сергеевич| -  | - | - | - | - | - |
+| Лаптев Александр Сергеевич | -  | - | - | - | - | - |
+| Лихачёв Сергей Валерьевич | -  | - | - | - | - | - |
+| Матвеев Антон Сергеевич | -  | - | - | - | - | - |
+| Ружейников Антон Андреевич | -  | - | - | - | - | - |
+| Седых Вячеслав Александрович | -  | - | - | - | - | - |
+| Селин Николай Сергеевич | -  | - | - | - | - | - |
+| Скрипкин Дмитрий Денисович | -  | - | - | - | - | - |
+| Троц Никита Владимирович | -  | - | [Страница](https://github.com/mrskylines) | - | - | - |
+| Усенко Лев Юрьевич | -  | - | - | - | - | - |
+| Федоров Даниил Валерьевич | -  | - | - | - | - | - |
+| Яскевич Константин Игоревич | -  | - | - | - | - | - |
+ 
