--- a/IDM-18-01/readme
+++ b/IDM-18-01/readme
@@ -31,3 +31,12 @@ https://github.com/stankin/inet-2018/invitations
 | Усенко Лев Юрьевич | -  | - | - | - | - | - |
 | Федоров Даниил Валерьевич | -  | - | - | - | - | - |
 | Яскевич Константин Игоревич | -  | - | - | - | - | - |
+
+| Студент | Роль | Команда | Страница | Проект | Модуль 1 | Модуль 2 |
+| :---:   | :-:  |   :-:   |   :-:    |  :-:   |    :-:   |   :-:    |
+| Горюнов Антон Дмитриевич | -  | By the way to Dmitrov | [Страница](https://github.com/gerafko/) | [Проект](https://github.com/gerafko/Rails-Project) | - | - |
+| Киляков Данил Александрович | -  | By the way to Dmitrov | [Страница](https://github.com/DanilKilyakov/InternetTecnology/wiki) | [Проект](https://github.com/gerafko/Rails-Project) | - | - |
+| Терентьев Владимир Александрович | -  | РКТ тим | [Страница](https://github.com/vlaterz) | [Проект](-) | - | - |
+| Касаткин Даниил Игоревич | -  | РКТ тим | [Страница](https://github.com/MajorLabrador) | [Проект](-) | - | - |
+| Распопов Максим Тимофеевич | -  | РКТ тим | [Страница](https://github.com/Maxim-Raspopov) | [Проект](-) | - | - |
+| Танашев Эльдар Хасанович | -  | crash team | [Страница](https://github.com/Adyga07) | [Проект](-) | - | - |
