--- a/IDM-18-01/readme
+++ b/IDM-18-01/readme
@@ -2,3 +2,30 @@
 
 https://github.com/stankin/inet-2018/invitations
 
+[Группа] **ИДМ-18-01**
+Аветисян Роберт Сергеевич	
+Андриянов Евгений Сергеевич	https://github.com/es-andriyanov
+Анисимов Олег Эдуардович	https://github.com/Wartorin
+Атанов Сергей Вадимович	https://github.com/nixelce
+Батухтин Михаил Сергеевич	https://github.com/Remdev
+Бесчастнов Илья Дмитриевич	https://github.com/IliaBeschastnov
+Булычев Кирилл Валерьевич	https://github.com/KeryB
+Веселов Никита Кириллович	https://github.com/foxy1303
+Грязнов Денис Владимирович	https://github.com/DeniskaRediska
+Занина Екатерина Сергеевна	https://github.com/pander1c
+Зотов Егор Вячеславович	https://github.com/EgorZotov
+Комиссаров Ян Вадимович	https://github.com/d1slike
+Коркмасов Джалалутдин Дагирович	https://github.com/JimmyEagleEye
+Корный Артур Александрович	https://github.com/Creativio
+Крюков Алексей Сергеевич	https://github.com/AlexeyKrukov
+Лаптев Александр Сергеевич	
+Лихачёв Сергей Валерьевич	https://github.com/lihach13
+Матвеев Антон Сергеевич	https://github.com/keklgar
+Ружейников Антон Андреевич	https://github.com/Jet313
+Седых Вячеслав Александрович	https://github.com/vyachsed
+Селин Николай Сергеевич	
+Скрипкин Дмитрий Денисович	
+Троц Никита Владимирович	https://github.com/mrskylines
+Усенко Лев Юрьевич	https://github.com/levich95
+Федоров Даниил Валерьевич	https://github.com/danya2296
+Яскевич Константин Игоревич	https://github.com/KonstantinYaskevich
