--- a/IDM-18-01/readme
+++ b/IDM-18-01/readme
@@ -2,7 +2,7 @@
 
 https://github.com/stankin/inet-2018/invitations
 
-[Группа] **ИДМ-18-01**
+[Групп] **ИДМ-18-01**
 Аветисян Роберт Сергеевич	
 Андриянов Евгений Сергеевич	https://github.com/es-andriyanov
 Анисимов Олег Эдуардович	https://github.com/Wartorin
